# hello-world-rs-action

./: .gitmodules  Cargo.toml  package-lock.json  package.json  run-node.sh  run.sh  test-event.json
.github/workflows/: main.yml
src/: bin.rs  lib.rs
