[package]
name = "hello-world-rs-action"
version = "0.1.0"
authors = ["Seth Pellegrino <seth@codecopse.net>"]
edition = "2018"

[dependencies]
serde_json = "1"

[dependencies.chrono]
version = "0.4.13"
features = [
    "wasmbind",
]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
node-sys = { path = "node-sys" }
# toolkit-rs = { path = "toolkit-rs" }
actions-toolkit-sys = { path = "actions-toolkit-sys" }
js-sys = "0.3.42"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"
